source/_themes/125book/static/runestone-iwu-custom-sphinx-bootstrap.css
/* ... */
.container  .section >*:not(.section) {
	max-width: 500pt;
    overflow: scroll;
}

.container .section > .table {
    width: unset;  /* don't need to stretch tables to 100%, which is what bootstrap seems to want */
}
.container .section > .table.align-left {
    margin-left: 2em;
}

.container .section a.image-reference {
    /* to get them centered within the weird width thing we have going here */
	display: block;
    margin: 1em auto;
}

div.figure {
    text-align: center;
    margin: 0 !important;  /* override Sphinx 2.0's cenetering (across the entire page) */
    padding: 0;
}
div.figure p.caption {
    font-style: italic;
}
div.figure p.caption:before {
    content: "Figure " counter(figure) ": ";
    counter-increment: figure;
}

.container  .section .parsons, .container  .section .parsons .sortable-code-container, .container  .section .ac_section, .container  .section .cd_section{
	max-width: none !important;
}

.footer {
    padding: 10px;
    margin-top: 15px;
    background-color: #eee;
    color: #777;
    font-size: 90%;
    line-height: 1.25em;
}

.loggedinuser {
    font-weight: bold;
}

/* end navbar and menu related styles */

/* inline code */
code {
    padding: 2px 3px 0 3px;
    color: #b44;
    background-color: #f5f5f0;
    border: 1px solid #ddd;
}

.btn.disabled {
    /* needed in Bootstrap 3 to allow tooltips on disabled buttons */
    pointer-events: auto;
}

input[type="radio"],
input[type="checkbox"] {
    margin-right: 5px;
}

.tooltip {
    z-index: 2000 !important;
}

.tooltip.in {
    opacity: 0.8;
    filter: alpha(opacity=80);
}

.alert form {
    margin-bottom: 0;
}

/* Copied/adapted from: video.css, for some reason, and so not included if we don't include the video extension... */
.cl_caption:before {
    content: "CodeLens " counter(codelens) ": ";
    counter-increment: codelens;
}
/* End copy from video.css. */

div.ExecutionVisualizer {
    padding: 1em;
    border: solid 2px #aaa;
}
div.ExecutionVisualizer table.visualizer {
    width: auto;
    margin: 0;
}

/* override alert-warning that runestone seems to use everywhere */
.runestone.alert-warning, .runestone .alert-warning {
    color: unset;
    background: unset;
    border: unset;
}

/* override the color styles applied by Skulpt to the unittest results divs */
.unittest-results.alert-danger {
    background-color: #f2dede !important;
}
.unittest-results.alert-success {
    background-color: #dff0d8 !important;
}
.unittest-results {
    width: 100%;
    text-align: center;
}
.unittest-results table {
    margin: auto;
}
.ac-feedback {
    border: 1px solid #ccc;
    padding: 0.1em 0.5em;
}

.alert label {
    font-weight: normal;
}

/* These admonition styles styles are copied from the Bootstrap .alert classes.
 Most of the !important declarations are to override the Sphinx basic.css styles */
.admonition {
    padding: 8px 14px 8px 14px !important;
    margin-bottom: 20px !important;
    margin-top: 20px !important;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
    background-color: #fcf8e3;
    border: 1px solid #fbeed5;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    /* Because runestone adds .alert and .alert-info on some of these instead
     * of just using admonition on these... */
    color: inherit;
}

/* .alert-danger */
.admonition.caution {
    background-color: #f2dede;
    border-color: #eed3d7;
}

/* .alert-info */
.admonition.tip, .admonition.note {
    background-color: #d9edf7;
    border-color: #bce8f1;
}

/* .alert-success */
.admonition-syntax-rule,
.admonition-syntax-pattern,
.admonition-definition {
    background-color: #dff0d8;
    border-color: #d6e9c6;
}

.admonition-check-your-understanding {
    width: 100%;
    max-width: unset !important;
    background: none;
    box-shadow: 0px 0px 4px 1px rgba(200,150,0,0.5);
}

/* for todos from sphinx.ext.todo */
.admonition-todo {
    background-color: #fa9;
    border-color: #d98;
}

/* from web2py.css */
div.flash {
    font-weight: bold;
    position: fixed;
    padding: 10px;
    top: 55px;
    right: 45px;
    opacity: 0.95;
    margin: 0 0 10px 10px;
    vertical-align: middle;
    cursor: pointer;
    color: #fff;
    background-color: #000;
    border: 2px solid #fff;
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    background-image: -webkit-linear-gradient(top, #222, #000);
    background-image: -o-linear-gradient(top, #222, #000);
    background-image: -moz-linear-gradient(90deg, #222, #000);
    background-image: linear-gradient(top, #222, #000);
    background-repeat: repeat-x;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    z-index: 2000;
}

/* Styles for the login, registration, and Janrain forms */
#web2py_user_form {
    margin-top: 10px;
}

#web2py_user_form form {
    float: left;
    margin-right: 150px;
    padding-top: 3px;
}

#web2py_user_form td {
    padding-bottom: 15px;
}

#web2py_user_form td.w2p_fw {
    width: 299px;
}

#auth-actions {
    margin-top: 50px;
}

#sign_in_text td {
    font-size: 17px;
    color: #333;
    font-family: 'lucida grande', Verdana, sans-serif;
    padding-bottom: 13px;
}

#auth_user_remember {
    margin-top: -20px;
}
/* End login, registration, Janrain styles */

/* end-of-chapter exercises styles */
#exercises > ol > li,
#programming-exercises > ol > li {
    margin-bottom: 30px;
}

#exercises > ol > li:nth-child(even),
#programming-exercises > ol > li:nth-child(even) {
    padding: 1.2em 1.4em;
    background: #faf7df;
    border: 1px solid #fbeed5;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}
/* End chapter exercises styles */

/* Modal dialog styles (scratch activecode, compare me, etc) */
.scratch-ac-modal {
    width: 800px;
}

.compare-modal .progress {
    margin-bottom: 0;
}

.compare-me-progress {
    width: 100%;
}
/* ... */

